[gd_scene load_steps=2 format=3 uid="uid://bv3x8mp2nq1yt"]

[ext_resource type="Script" path="res://scenes/ui/level_up_ui.gd" id="1_levelup"]

[node name="LevelUpUI" type="CanvasLayer"]
layer = 20
script = ExtResource("1_levelup")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="Panel" type="PanelContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -200.0
offset_right = 250.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="TitleLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "LEVEL UP!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ChoicesContainer" type="VBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="InstructionLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Press 1-4 to select"
horizontal_alignment = 1
